force-app/main/default/objects/QuoteLineItem/fields/DEV_Description__c.field-meta.xml
<CustomField>
    <fullName>DEV_Description__c</fullName>
    <formula>If( Description !=null, Description , Product2.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>