force-app/main/default/objects/QuoteLineItem/fields/DS029__c.field-meta.xml
<CustomField>
    <fullName>DS029__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remplacement Produit</label>
    <referenceTo>RempalcementProduits__c</referenceTo>
    <relationshipLabel>Éléments de devis</relationshipLabel>
    <relationshipName>ElementDeDevis</relationshipName>
    <type>Lookup</type>
</CustomField>