force-app/main/default/objects/QuoteLineItem/fields/ELD_Conditionnement__c.field-meta.xml
<CustomField>
    <fullName>ELD_Conditionnement__c</fullName>
    <formula>Product2.PRD_Conditionnement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conditionnement</label>
    <type>Text</type>
</CustomField>