force-app/main/default/objects/QuoteLineItem/fields/ELD_MainProduct__c.field-meta.xml
<CustomField>
    <fullName>ELD_MainProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Product</label>
    <type>Checkbox</type>
</CustomField>