force-app/main/default/objects/QuoteLineItem/fields/ELD_Tech_Commande__c.field-meta.xml
<CustomField>
    <fullName>ELD_Tech_Commande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech_Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Éléments de devis</relationshipLabel>
    <relationshipName>Elements_de_devis</relationshipName>
    <type>Lookup</type>
</CustomField>