force-app/main/default/objects/QuoteLineItem/fields/ELD_Traduction__c.field-meta.xml
<CustomField>
    <fullName>ELD_Traduction__c</fullName>
    <inlineHelpText>Use this field to store manual translation of line items</inlineHelpText>
    <label>Traduction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>