force-app/main/default/objects/QuoteLineItem/fields/EntiteBW__c.field-meta.xml
<CustomField>
    <fullName>EntiteBW__c</fullName>
    <formula>Quote.DEV_EntiteBW__c</formula>
    <label>EntiteBW</label>
    <type>Text</type>
</CustomField>