force-app/main/default/objects/QuoteLineItem/fields/Main_d_oeuvre__c.field-meta.xml
<CustomField>
    <fullName>Main_d_oeuvre__c</fullName>
    <formula>If(OR(Product2.ProductCode = &apos;SDRJ&apos;, Product2.ProductCode = &apos;SRJ&apos;), &apos;1&apos;, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main d&apos;oeuvre</label>
    <type>Text</type>
</CustomField>