force-app/main/default/objects/QuoteLineItem/fields/PRD_ERPIdESP__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdESP__c</fullName>
    <formula>Product2.PRD_ERPIdESP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRD_ERPIdESP</label>
    <type>Text</type>
</CustomField>