force-app/main/default/objects/QuoteLineItem/fields/PRD_ERPIdFRA__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdFRA__c</fullName>
    <formula>Product2.PRD_ERPIdFRA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRD_ERPIdFRA</label>
    <type>Text</type>
</CustomField>