force-app/main/default/objects/QuoteLineItem/fields/PRD_ERPIdGBR__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdGBR__c</fullName>
    <formula>Product2.PRD_ERPIdGBR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRD_ERPIdGBR</label>
    <type>Text</type>
</CustomField>