force-app/main/default/objects/QuoteLineItem/fields/PRD_ERPIdITA__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdITA__c</fullName>
    <formula>Product2.PRD_ERPIdITA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRD_ERPIdITA</label>
    <type>Text</type>
</CustomField>