force-app/main/default/objects/QuoteLineItem/fields/PRD_ERPIdNLD__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdNLD__c</fullName>
    <formula>Product2.PRD_ERPIdNLD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRD_ERPIdNLD</label>
    <type>Text</type>
</CustomField>