force-app/main/default/objects/QuoteLineItem/fields/PRD_ERPIdPOL__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdPOL__c</fullName>
    <formula>Product2.PRD_ERPIdPOL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRD_ERPIdPOL</label>
    <type>Text</type>
</CustomField>