force-app/main/default/objects/QuoteLineItem/fields/PRD_ERPIdPRT__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdPRT__c</fullName>
    <formula>Product2.PRD_ERPIdPRT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRD_ERPIdPRT</label>
    <type>Text</type>
</CustomField>