force-app/main/default/objects/QuoteLineItem/fields/PRD_ERPIdUSA__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdUSA__c</fullName>
    <formula>Product2.PRD_ERPIdUSA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRD_ERPIdUSA</label>
    <type>Text</type>
</CustomField>