force-app/main/default/objects/QuoteLineItem/fields/RemisePiece__c.field-meta.xml
<CustomField>
    <fullName>RemisePiece__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remise Pièce</label>
    <type>Checkbox</type>
</CustomField>