force-app/main/default/objects/QuoteLineItem/fields/SerieProduit__c.field-meta.xml
<CustomField>
    <fullName>SerieProduit__c</fullName>
    <formula>Text(Product2.PDT_Serie__c)</formula>
    <label>SerieProduit</label>
    <type>Text</type>
</CustomField>