force-app/main/default/objects/QuoteLineItem/validationRules/Line_item_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Line_item_Description</fullName>
    <active>true</active>
    <description>This rule limit the description field to 280 characters</description>
    <errorConditionFormula>Len( Description )&gt;280</errorConditionFormula>
    <errorMessage>You have exceeded the number of allowed Characters in Description. Maximum allowed is 280.
Ha superato il numero di caratteri consentiti nel campo Descrizione. Il massimo consentito è 280.</errorMessage>
</ValidationRule>