force-app/main/default/objects/QuoteLineItem/validationRules/VR01_ELDEV_PrixNonModifiable.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_ELDEV_PrixNonModifiable</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				 LastModifiedBy.USER_ByPassRegleValidation__c = FALSE,NOT(ISCHANGED( ELD_MainProduct__c )),NOT(ISCHANGED(  Discount )),NOT(ISCHANGED( Description )),NOT(ISCHANGED(  ELD_Traduction__c )),
				 PricebookEntry.UnitPrice  &lt;&gt;  UnitPrice )</errorConditionFormula>
    <errorMessage>Attention, vous n’êtes pas autorisé à modifier le prix de vente. Celui-ci doit être identique au prix catalogue.</errorMessage>
</ValidationRule>