force-app/main/default/objects/QuoteLineItem/validationRules/VR01_ELDEV_PrixNonModifiable_NEW.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_ELDEV_PrixNonModifiable_NEW</fullName>
    <active>false</active>
    <description>Ajoute du critère de contrôle sur le type de deVIS se déclenche uniquement si Devis SF. 
Utiliser le % de remise pour faire varier le montant en cas de devis SF autorisé</description>
    <errorConditionFormula>AND(
				 LastModifiedBy.USER_ByPassRegleValidation__c = FALSE
				 ,NOT(ISCHANGED( ELD_MainProduct__c ))
				 ,NOT(ISCHANGED(  Discount ))
				 ,NOT(ISCHANGED( Description ))
				 ,NOT(ISCHANGED(  ELD_Traduction__c ))
				 ,PricebookEntry.UnitPrice  &lt;&gt;  UnitPrice 
				 ,ISPICKVAL(Quote.DEV_TypeDeDevis__c , &apos;1&apos; )
				 )</errorConditionFormula>
    <errorMessage>VR01_ED : Attention, vous n’êtes pas autorisé à modifier le prix de vente. Celui-ci doit être identique au prix catalogue.</errorMessage>
</ValidationRule>